<resources>
    <string name="app_name">MockProjectDemo</string>
    <string name="btnC">C</string>
    <string name="btnNhan">x</string>
    <string name="btnChia">/</string>
    <string name="btnBack">Back</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnCong">+</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnTru">-</string>
    <string name="btn3">3</string>
    <string name="btn2">2</string>
    <string name="btn1">1</string>
    <string name="btn0">0</string>
    <string name="btnPhay">.</string>
    <string name="btn30">000</string>
    <string name="btnBang">Xong</string>
</resources>
