<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:stretchColumns="*"
    android:gravity="bottom"
    tools:context="com.example.nguyennam.mockprojectdemo.CalculatorActivity">

    <TableRow>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/edtTinh"
            android:inputType="text"
            android:gravity="end"
            android:enabled="false"
            android:textColor="@color/colorBlue"
            android:layout_span="4"
            android:textSize="40sp"
            />
    </TableRow>

    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnC"
            android:text="@string/btnC"
            android:textColor="@color/colorRed"
            style="?android:attr/button"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnNhan"
            android:text="@string/btnNhan"
            android:textColor="@color/colorBlue"
            style="?android:attr/button"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnChia"
            android:text="@string/btnChia"
            android:textColor="@color/colorBlue"
            style="?android:attr/button"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnBack"
            android:text="@string/btnBack"
            android:textColor="@color/colorRed"
            style="?android:attr/button"
            android:textSize="20sp"
            />
    </TableRow>

    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn7"
            android:text="@string/btn7"
            style="?android:attr/button"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn8"
            android:text="@string/btn8"
            style="?android:attr/button"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn9"
            android:text="@string/btn9"
            style="?android:attr/button"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnCong"
            android:text="@string/btnCong"
            android:textColor="@color/colorBlue"
            style="?android:attr/button"
            android:textSize="20sp"
            />
    </TableRow>

    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn4"
            android:text="@string/btn4"
            style="?android:attr/button"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn5"
            android:text="@string/btn5"
            style="?android:attr/button"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn6"
            android:text="@string/btn6"
            style="?android:attr/button"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnTru"
            android:text="@string/btnTru"
            android:textColor="@color/colorBlue"
            style="?android:attr/button"
            android:textSize="20sp"
            />
    </TableRow>
    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn1"
            android:text="@string/btn1"
            style="?android:attr/button"
            android:textSize="20sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn2"
            android:text="@string/btn2"
            style="?android:attr/button"
            android:textSize="20sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn3"
            android:text="@string/btn3"
            style="?android:attr/button"
            android:textSize="20sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            style="?android:attr/button"
            android:textSize="20sp"
            />
    </TableRow>

    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn0"
            android:text="@string/btn0"
            style="?android:attr/button"
            android:textSize="20sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnPhay"
            android:text="@string/btnPhay"
            android:textColor="@color/colorBlue"
            style="?android:attr/button"
            android:textSize="20sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btn30"
            android:text="@string/btn30"
            style="?android:attr/button"
            android:textSize="20sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnBang"
            android:text="@string/btnBang"
            android:textColor="@color/colorBlue"
            style="?android:attr/button"
            android:textSize="20sp"
            />
    </TableRow>

</TableLayout>
